--- a/src/main/resources/com/example/labb3/game-view.fxml
+++ b/src/main/resources/com/example/labb3/game-view.fxml
@@ -4,21 +4,20 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.labb3.GameViewController">
-   <top>
-      <HBox alignment="CENTER_LEFT" prefHeight="48.0" prefWidth="500.0" BorderPane.alignment="CENTER">
+<AnchorPane prefHeight="700.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.labb3.GameViewController">
+   <children>
+      <HBox alignment="CENTER_LEFT" prefHeight="48.0" prefWidth="500.0">
          <children>
-            <Button fx:id="cirkelButton" onAction="#onCirkelClicked" text="Cirkel" />
-            <Button fx:id="rectangleButton" onAction="#onRectangleClicked" text="Rectangle" />
+            <Button fx:id="cirkelButton" mnemonicParsing="false" onAction="#onCirkelClicked" text="Cirkel" />
+            <Button fx:id="rectangleButton" mnemonicParsing="false" onAction="#onRectangleClicked" text="Rectangle" />
             <ColorPicker fx:id="colorPicked" />
             <Button mnemonicParsing="false" text="Button" />
             <Button mnemonicParsing="false" text="Button" />
-         </children></HBox>
-   </top>
-   <left>
-      <Canvas fx:id="canvas" height="448.0" onMouseClicked="#canvasClicked" width="494.0" BorderPane.alignment="CENTER" />
-   </left>
-
-
-
-</BorderPane>
+         </children>
+      </HBox>
+      <Pane layoutX="-1.0" layoutY="46.0" prefHeight="633.0" prefWidth="690.0">
+         <children>
+            <Canvas fx:id="canvas" height="643.0" layoutX="11.0" layoutY="4.0" onMouseClicked="#canvasClicked" width="690.0" BorderPane.alignment="TOP_LEFT" />
+         </children></Pane>
+   </children>
+</AnchorPane>
