--- a/src/main/resources/com/example/labb3/game-view.fxml
+++ b/src/main/resources/com/example/labb3/game-view.fxml
@@ -7,11 +7,12 @@
 <AnchorPane prefHeight="700.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.labb3.GameViewController">
    <HBox alignment="CENTER_LEFT" prefHeight="48.0" prefWidth="500.0">
       <children>
-         <Button fx:id="cirkelButton" mnemonicParsing="false" onAction="#onCirkelClicked" text="Cirkel" />
-         <Button fx:id="rectangleButton" mnemonicParsing="false" onAction="#onRectangleClicked" text="Rectangle" />
+         <ToggleButton  mnemonicParsing="false" text="Cirkel"        fx:id="cirkelButton"/>
+         <ToggleButton mnemonicParsing="false" text="Rectangle"      fx:id="rectangleButton" />
          <ColorPicker fx:id="colorPicked" />
          <Button mnemonicParsing="false" text="Undo" />
          <TextField fx:id="sizeTextField" onAction="#sizeTextField" prefHeight="25.0" prefWidth="76.0" />
+
 
       </children>
    </HBox>
