--- a/src/main/resources/com/example/labb3/game-view.fxml
+++ b/src/main/resources/com/example/labb3/game-view.fxml
@@ -18,7 +18,7 @@
    </HBox>
    <Pane layoutX="-1.0" layoutY="46.0" prefHeight="633.0" prefWidth="690.0">
       <children>
-         <Canvas fx:id="canvas" height="643.0" layoutX="11.0" layoutY="4.0" onMouseClicked="#canvasClicked" width="690.0" BorderPane.alignment="TOP_LEFT" />
+         <Canvas fx:id="canvas" height="643.0" width="690.0" layoutX="11.0" layoutY="4.0" onMouseClicked="#canvasClicked"  BorderPane.alignment="TOP_LEFT" />
       </children>
    </Pane>
 </AnchorPane>
