--- a/src/main/resources/com/example/labb3/game-view.fxml
+++ b/src/main/resources/com/example/labb3/game-view.fxml
@@ -5,12 +5,12 @@
 <?import javafx.scene.layout.*?>
 
 <AnchorPane prefHeight="700.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.labb3.GameViewController">
-   <HBox alignment="CENTER_LEFT" prefHeight="48.0" prefWidth="500.0">
+   <HBox alignment="CENTER_LEFT" prefHeight="48.0" prefWidth="700.0">
       <children>
-         <ToggleButton fx:id="cirkelButton" mnemonicParsing="false" onAction="#cirkelButton" text="Cirkel" />
-         <ToggleButton fx:id="rectangleButton" mnemonicParsing="false" text="Rectangle" />
+         <ChoiceBox fx:id="choiceBox" prefWidth="150.0" />
          <ColorPicker fx:id="colorPicked" />
-         <TextField fx:id="sizeTextField" onAction="#sizeTextField" prefHeight="25.0" prefWidth="76.0" />
+         <TextField fx:id="sizeTextField" prefHeight="25.0" prefWidth="76.0" />
+         <ToggleButton fx:id="toggleButton" mnemonicParsing="false" onAction="#toggleButton" text="ToggleButton" />
 
          <Button mnemonicParsing="false" onAction="#undoButton" text="Undo" />
          <Button mnemonicParsing="false" onAction="#saveButton" text="Save" />
@@ -23,5 +23,4 @@
          <Canvas fx:id="canvas" height="643.0" layoutX="11.0" layoutY="4.0" onMouseClicked="#canvasClicked" width="690.0" BorderPane.alignment="TOP_LEFT" />
       </children>
    </Pane>
-   <ChoiceBox fx:id="choiceBox" layoutX="531.0" layoutY="8.0" prefWidth="150.0" />
 </AnchorPane>
