--- a/src/main/resources/com/example/labb3/game-view.fxml
+++ b/src/main/resources/com/example/labb3/game-view.fxml
@@ -9,10 +9,11 @@
       <children>
          <ChoiceBox fx:id="choiceBox" prefWidth="150.0" />
          <ColorPicker fx:id="colorPicked" />
-         <TextField fx:id="sizeTextField"  prefHeight="25.0" prefWidth="76.0" />
+         <TextField fx:id="sizeTextField" prefHeight="25.0" prefWidth="76.0" />
          <ToggleButton fx:id="toggleButton" mnemonicParsing="false" onAction="#toggleButton" text="Selected Button" />
 
          <Button mnemonicParsing="false" onAction="#undoButton" text="Undo" />
+         <Button mnemonicParsing="false" text="redoButton" onAction="#redoButton"/>
          <Button mnemonicParsing="false" onAction="#saveButton" text="Save" />
 
 
@@ -23,4 +24,5 @@
          <Canvas fx:id="canvas" height="643.0" layoutX="11.0" layoutY="4.0" onMouseClicked="#canvasClicked" width="690.0" BorderPane.alignment="TOP_LEFT" />
       </children>
    </Pane>
+
 </AnchorPane>
